@@ -1,3 +1,12 @@
+Wed Nov 23 14:37:02 UTC 2011  Martin Corino  <mcorino@remedy.nl>
+
+        * MPC/config/taobaseidldefaults.mpb:
+        * MPC/modules/IDLHelper.pm:
+        
+          Moved addition of generated executor files (-Gex) from
+          taobaseidldefaults.mpb to IDLHelper.pm to be able to
+          correctly and transparently handle -oE and -oN switches.
+
 Tue Nov 22 12:46:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>
 
         * tests/Bug_3531b_Regression/server.cpp:
